fixed vertical alignment of logo on login and register page

--- a/static/css/register,login.css
+++ b/static/css/register,login.css
@@ -21,8 +21,8 @@ body {
     background-color: #cc9900;
     background-clip: border-box;
     position: absolute;
-    padding-top:0em;
-    display:flex;
+    padding-top: 0em;
+    display: flex;
     justify-content: center;
     z-index: -1;
 }
@@ -72,7 +72,7 @@ h5 {
     color: #f5f5f5;
 }
 
-.form{
+.form {
     padding-top: 5em;
     justify-content: center;
 }
@@ -85,27 +85,28 @@ h5 {
     left: 2%;
 }
 
-.homeIcon{
+.homeIcon {
     position: relative;
     top: 0.25em;
 }
 
 .logoCircle {
-    display: inline-block;
+    display: block;
     height: 30px;
     width: 30px;
     background-color: #cc9900;
     border: 3px solid #ededed;
     border-radius: 50%;
-    position:absolute;
-    bottom:-17px;
+    position: absolute;
+    bottom: -17px;
     padding-bottom: 0;
 }
 
 .logo {
-    display: inline-block;
+    display: block;
     height: 30px;
     width: 30px;
     position: absolute;
     left: 0%;
+    top: 0%;
 }
